<resources>
    <!-- SPECIAL CHARACTERS -->
    <!-- á = &#225; -->
    <!-- é = &#233; -->
    <!-- í = &#237; -->
    <!-- ó = &#243; -->
    <!-- Ó = &#211; -->
    <!-- ú = &#250; -->
    <!-- ñ = &#241; -->
    <!-- Ñ = &#209; -->
    <!-- ¿ = &#191; -->
    <!-- ? = &#63; -->
    <!-- Space = &#160; -->
    <!-- " = \&quot; -->
    <!-- ' = &#39; -->
    <!-- ... = &#8230; -->
    <!-- $ = &#36; -->
    <!-- ( = &#40; -->
    <!-- ) = &#41; -->
    <!-- + = &#43; -->
    <!-- / = &#47; -->
    <!-- % = &#37; -->
    <!-- - = &#8211; -->
    <!-- , = &#44; -->
    <!-- . = &#46; -->
    <!-- É = &#201; -->
    <!-- * = &#42; -->
    <!-- : = &#58; -->
    <!-- Á = &#193; -->
    <!-- ! = &#33; -->
    <!-- ¡ = &#161; -->
    <!-- & = &#38; -->
    <!-- Ú = &#218; -->
    <!-- • = &#8226; -->

    <string name="app_name">PokeApp</string>
    <string name="sing_up_with">Sing up with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="recovery_password">Forgot Password &#63;</string>
    <string name="sing_in">Login</string>
    <string name="sing_up">Register</string>
    <string name="sing_in_with">Or</string>
    <string name="register_now">Register now</string>
    <string name="new_pokemon_trainer">New pok&#233;mon trainer &#63;</string>
    <string name="pokemon_trainer">I am a pokemon trainer</string>
    <string name="back_to_login">Back to login</string>
    <string name="hi_pokemon_trainer">Hi pok&#233;mon trainer 👋</string>
    <string name="welcome">welcome to PokeApp</string>
    <string name="your">Your</string>
    <string name="regions">regions</string>
    <string name="add">Add</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="test_crashlytics">Test Crashlytics</string>
    <string name="test_crashlyticss">Button to test crashlytics pressed to force error</string>
    <string name="name_region">name region</string>
    <string name="s">♎️</string>
    <string name="pokemonname">PokemonName</string>
    <string name="pok_mon">Pok&#233;mon</string>

    <array name="region_icons">
        <item>♈️</item>
        <item>☮️</item>
        <item>☪️</item>
        <item>🕉</item>
        <item>☸️</item>
        <item>♍️</item>
        <item>♉️</item>
        <item>🕎</item>
        <item>♒️</item>
    </array>
    <string name="title_activity_team">TeamActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="region">REGION</string>
    <string name="dont_have_team">You dont have a pokemon team</string>
    <string name="create_team">Create team</string>
    <string name="pokemon_number">№ 001</string>
    <string name="electric">Electric</string>
    <string name="pikachu">Pikachu</string>
    <string name="pokemon_description">It has small electric sacs on both its\ncheeks. If threatened, it looses electric\ncharges from the sacs.</string>
    <string name="pokemon_selection">POK&#201;MON SELECTION</string>
    <string name="message_pokemon">"Your pokemon team must have between 3 to 6 pokemons"</string>
    <string name="message_pokemon_6">"Your pokemon team must have between 6 to 3 pokemons"</string>
    <string name="team_pokemon">Team Pokemon</string>
    <string name="pokemon_team">Team Name</string>
    <string name="add_team">Add Team</string>
    <string name="team">Trainer</string>
    <string name="_1">1</string>
    <string name="delete">DELETE</string>
</resources>