<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?android:textColorPrimary"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.activities.HomeActivity">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/barlow_bold"
            android:gravity="center"
            android:text="@string/email" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileMenu"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/snorlax_avatar" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/barlow_bold"
            android:text="@string/hi_pokemon_trainer"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/welcome"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_regular"
                android:text="@string/pok_mon"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/barlow_bold"
                android:text="@string/regions"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/regionsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            tools:listitem="@layout/card_region_item" />
    </FrameLayout>


</LinearLayout>