<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="?android:textColorPrimary"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pokemonNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="19dp"
                android:fontFamily="@font/barlow_bold"
                android:gravity="center"
                android:text="@string/pokemon_number"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="163dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/barlow_bold"
                android:text="@string/pikachu"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemonName"
                android:layout_alignStart="@+id/pokemonName"
                android:layout_marginStart="-143dp"
                android:layout_marginTop="-8dp"
                android:fontFamily="@font/barlow_light"
                android:text="@string/electric"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonSecondType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemonName"
                android:layout_marginStart="7dp"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@+id/pokemonType"
                android:fontFamily="@font/barlow_light"
                android:text="@string/electric"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="76dp"
                android:layout_height="83dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="164dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="152dp"
                android:contentDescription="@null"
                android:padding="10dp"
                android:src="@drawable/pikachu_avatar" />

            <TextView
                android:id="@+id/pokemonDescription"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_below="@+id/pokemonImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="87dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/barlow_regular"
                android:gravity="center"
                android:text="@string/pokemon_description"
                android:textColor="?android:textColorPrimaryInverse"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>