<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="?android:textColorPrimary"
        android:elevation="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pokemonNumberLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="19dp"
                android:fontFamily="@font/barlow_bold"
                android:gravity="center"
                android:text="@string/pokemon_number"
                android:textColor="@color/placeholder"
                android:background="@color/placeholder"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonNameLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/placeholder"
                android:background="@color/placeholder"
                android:layout_marginStart="19dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/barlow_bold"
                android:text="@string/pikachu"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonTypeLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemonNameLoading"
                android:layout_alignStart="@+id/pokemonNameLoading"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/barlow_light"
                android:textColor="@color/placeholder"
                android:background="@color/placeholder"
                android:textStyle="bold"
                android:text="@string/electric"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/pokemonSecondTypeLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemonNameLoading"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/pokemonTypeLoading"
                android:fontFamily="@font/barlow_light"
                android:text="@string/electric"
                android:textColor="@color/placeholder"
                android:background="@color/placeholder"                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/pokemonImageLoading"
                android:layout_width="wrap_content"
                android:layout_height="237dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="72dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="77dp"
                android:background="@color/placeholder"
                android:contentDescription="@null"
                android:padding="10dp"
                android:textColor="@color/placeholder" />

            <TextView
                android:id="@+id/pokemonDescriptionLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemonImageLoading"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="92dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="20dp"
                android:background="@color/placeholder"
                android:fontFamily="@font/barlow_regular"
                android:gravity="center"
                android:textColor="@color/placeholder"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/pokemonSelectedLoading"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/pokemonImageLoading"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:background="@color/placeholder"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>